test/samples/invalid/missingSemiColon.ygl
node Foo {
    out {
        int bar = 0
    }
}